--- a/Board/package.json
+++ b/Board/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.5.11",
+    "vue-js-modal": "^1.3.31",
     "vue-router": "^3.1.3",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.1.1"
